devops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drmilindbapat
  labels:
    app: drmilindbapat
