devops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drmilindbapat-web
  namespace: drmilindbapat
  labels:
    app: drmilindbapat-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: drmilindbapat-web
